<resources>
    <string name="app_name">LWAF</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="dashboard_activity_label">DashboardActivity</string>
    <string name="login_activity_label">LoginActivity</string>
    <string name="registration_activity_label">RegistrationActivity</string>
    <string name="global_conversation_label">GlobalConversationActivity</string>
    <string name="room_label">RoomActivity</string>
    <string name="welcome_activity_label">WelcomeActivity</string>
    <string name="news_activity_label">NewsActivity</string>
    <string name="post_activity_label">PostActivity</string>
    <string name="ratings_activity_label">RatingsActivity</string>
    <string name="settings_activity_label">SettingsActivity</string>
    <string name="friends_activity_label">FriendsActivity</string>
    <string name="private_chat_activity_label">PrivateChatActivity</string>
    <string name="create_post_activity_label">CreatePostActivity</string>
    <string name="wallet_activity_label">WalletActivity</string>
    <string name="admin_panel_activity_label">AdminPanelActivity</string>
    <string name="next">Дальше</string>
    <string name="previous">Назад</string>
    <string name="cancel">Закрыть</string>
    <string name="report">Пожаловаться</string>
    <string name="add_friend">Добавить в друзья</string>
    <string name="accept_friend_request">Принять зяавку</string>
    <string name="cancel_friend_request">Отменить зяавку</string>
    <string name="remove_from_friends">Удалить из друзей</string>
    <string name="error_0">Обновите приложение в PlayMarket или в Telegram @lwafapp</string>
    <string name="error_1">Неизвестная ошибка</string>
    <string name="error_2">Нет данных</string>
    <string name="error_3">Неизвестные данные</string>
    <string name="error_4">Вы забыли указать параметры</string>
    <string name="error_5">Неизвестный девайс айди</string>
    <string name="error_6">Ошибка авторизации</string>
    <string name="error_7">Вы не авторизованны</string>
    <string name="error_8">Вы забанены</string>
    <string name="error_11">Неправильный пароль</string>
    <string name="error_13">Неправильный ник</string>
    <string name="error_14">Ник уже занят</string>
    <string name="error_20">Неизвестный тип авторизации</string>
    <string name="error_21">Неверный пользователь</string>
    <string name="error_30">Неизвестный тип пользователя</string>
    <string name="error_40">Вы уже состоите в комнате</string>
    <string name="error_50">Вы не состоите в комнате</string>
    <string name="error_51">Неверное значение игроков</string>
    <string name="error_52">Длинное название комнаты</string>
    <string name="error_53">Комнату можно создавать раз в 20 секунд</string>
    <string name="error_60">Такая комната не существует</string>
    <string name="error_61">Вы уже состоите в комнате. Попробуйте перезайти</string>
    <string name="error_62">Нет свободных мест</string>
    <string name="error_63">Неверный пароль</string>
    <string name="error_70">Длинное сообщение</string>
    <string name="error_80">Длинный поисковый запрос</string>
    <string name="error_91">Длинный трек</string>
    <string name="error_92">Вы уже поставили трек в очередь</string>
    <string name="error_93">Неизвестный трек</string>
    <string name="error_94">Неизвестная ошибка</string>
    <string name="error_100">Неизвестный трек</string>
    <string name="error_110">Вы уже привязали ВК</string>
    <string name="error_111">Неправильный токен</string>
    <string name="error_112">Этот аккаунт уже привязан</string>
    <string name="error_120">Вы не привязалали ВК</string>
    <string name="error_131">Недостаточно Монеток. Нужно: 5</string>
    <string name="error_132">Неизвестный тип реакции</string>
    <string name="error_140">Неверный пользователь</string>
    <string name="error_141">Вы уже являетесь друзьями</string>
    <string name="error_150">Такого друга не существует</string>
    <string name="error_170">Такого друга не существует</string>
    <string name="error_190">Такое сообщение не существует</string>
    <string name="error_200">Вы уже состоите в глобальном чате</string>
    <string name="error_210">Вы не состоите в глобальном чате</string>
    <string name="error_211">Вас кикнули</string>
    <string name="error_220">Такого поста не существует</string>
    <string name="error_230">Слишком длинный текст</string>
    <string name="error_231">Такого комментария не существует</string>
    <string name="error_240">Пользователь не онлайн</string>
    <string name="error_250">Репорт можно отправлять раз в 5 минут</string>
    <string name="error_260">Недостаточно Монеток для ставки</string>
    <string name="error_261">Сейчас не идёт лотерея!</string>
    <string name="error_262">Вы уже делали ставку!</string>
    <string name="error_263">!</string>
    <string name="error_270">Неверная почта</string>
    <string name="error_271">Вы не запросили код</string>
    <string name="error_272">Неверный код</string>
    <string name="error_273">Недостаточно Монеток. Нужно: 1000</string>
    <string name="error_274">Вы не можете установить бесплатный ник</string>
    <string name="error_280">Вы уже привязали почту</string>
    <string name="error_290">Неизвестный тип</string>
    <string name="error_300">У вас не осталось вращений</string>
    <string name="error_310">Вы не ставили трек</string>
    <string name="error_400">Такого промокода нету</string>
    <string name="error_401">Вы уже активировали данный промокод</string>
    <string name="error_9999">Недостаточно прав</string>
    <string name="error_10001">Вас выкинул модератор</string>
    <string name="error_10101">Данный сервис временно недоступен</string>
    <string name="error_10102">Такого сервиса не существует</string>
    <string name="error_10103">Такой жалобы не существует</string>
    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="login">Вход</string>
    <string name="login_title">Логин</string>
    <string name="password_hint">Пароль</string>
    <string name="transfer_to_signup">Ещё нет аккаунта?</string>
    <string name="app_lozung">Слушай C Друзьями</string>
    <string name="invalid_data">Неправильные данные</string>
    <string name="registration">Регистрация</string>
    <string name="information">Информация</string>
    <string name="create_room_title">Создание комнаты</string>
    <string name="login_with_vk">Вход через ВК</string>
    <string name="players_size">Пользователи</string>
    <string name="ok">OK</string>
    <string name="set_track">Поставить трек</string>
    <string name="error_unset_vk_account_for_track">Привяжите ВК в настройках для прослушивания треков</string>
    <string name="create_room">Создать</string>
    <string name="without_parametrs">Вы не указали один из параметров</string>
    <string name="you_have_account">Уже есть аккаунт?</string>
    <string name="menu_friends">Друзья</string>
    <string name="room_name">Название комнаты</string>
    <string name="players_count_size">Количество пользователей</string>
    <string name="default_players_size">5</string>
    <string name="input_data">Введите данные</string>
    <string name="whell_title">Ежедневный бонус</string>
    <string name="loto">Лото</string>
    <string name="settings">Настройки</string>
    <string name="common">Общее</string>
    <string name="privacy">Приватность</string>
    <string name="change_gender">Сменить пол</string>
    <string name="link_vk">Привязать ВК</string>
    <string name="change_name">Сменить никнейм</string>
    <string name="privacy_policy">Политика конфиденциальности</string>
    <string name="terms_of_use">Пользовательское соглашение</string>
    <string name="show_list_friends">Скрывать список друзей</string>
    <string name="show_balance">Скрывать баланс</string>
    <string name="show_recent_tracks">Скрывать недавние треки</string>
    <string name="adminka">Админка</string>
    <string name="reports">Репорты</string>
    <string name="clients">Клиенты</string>
    <string name="sql">SQL</string>
    <string name="services">Сервисы</string>
    <string name="enable_loto">Включить Лото</string>
    <string name="variants_get_coins">Способы добычи Монеток</string>
    <string name="wheel_description">Заходите в игру каждый день и крутите колесо!</string>
    <string name="loto_description">Угадывайте правильные числа в мини-игре в комнатах и выигрывайте Монетки!</string>
    <string name="listening_musics">Слушайте музыку</string>
    <string name="listening_musics_description">Слушайте музыку в комнатах и получайте за каждую проигранную минуту 1 Монетку!</string>
    <string name="promocodes">Промокоды</string>
    <string name="promocodes_description">Подписывайтесь на нас в Телеграме и находите промокоды: t.me/lwafapp</string>
</resources>