<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context="com.Zakovskiy.lwaf.adminPanel.AdminPanelActivity">

    <TextView
        android:id="@+id/friendUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:text="@string/adminka"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:textStyle="bold" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnReports"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reports"
            android:visibility="gone" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnClients"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/clients"
            android:visibility="gone" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSQL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sql"
            android:visibility="gone" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnServices"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/services"
            android:visibility="gone" />
    </LinearLayout>
</LinearLayout>