<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Space
            android:layout_width="5dp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/settings"
            android:textSize="30sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/rectangle"
        android:orientation="vertical">

        <Space
            android:layout_width="0dp"
            android:layout_height="5dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Space
                android:layout_width="20dp"
                android:layout_height="wrap_content" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonSettingsCommon"
                android:layout_width="110sp"
                android:layout_height="35sp"
                android:layout_marginTop="5sp"
                android:layout_weight="1"
                android:background="@drawable/rounded"
                android:backgroundTint="#FFF"
                android:text="@string/common"
                android:textColor="#000000"
                android:textSize="14sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonSettingsPrivacy"
                android:layout_width="110sp"
                android:layout_height="35sp"
                android:layout_marginTop="5sp"
                android:layout_weight="1"
                android:background="@drawable/rounded"
                android:text="@string/privacy"
                android:textColor="#FFFFFF"
                android:textSize="14sp" />

            <Space
                android:layout_width="20dp"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Space
                android:layout_width="50dp"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:id="@+id/commonSettingsLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:visibility="visible">

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="5dp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/buttonSettingsChangeGender"
                    android:layout_width="match_parent"
                    android:layout_height="35sp"
                    android:layout_marginTop="5sp"
                    android:background="@drawable/rounded"
                    android:text="@string/change_gender"
                    android:textColor="#FFFFFF"
                    android:textSize="14sp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/buttonSettingsLinkVK"
                    android:layout_width="match_parent"
                    android:layout_height="35sp"
                    android:layout_marginTop="5sp"
                    android:background="@drawable/rounded"
                    android:text="@string/link_vk"
                    android:textColor="#FFFFFF"
                    android:textSize="14sp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/buttonSettingsChangeName"
                    android:layout_width="match_parent"
                    android:layout_height="35sp"
                    android:layout_marginTop="5sp"
                    android:background="@drawable/rounded"
                    android:text="@string/change_name"
                    android:textColor="#FFFFFF"
                    android:textSize="14sp" />

                <Button
                    android:id="@+id/buttonSettingPP"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="#00FFFFFF"
                    android:text="@string/privacy_policy" />

                <Button
                    android:id="@+id/buttonSettingToU"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="#00FFFFFF"
                    android:text="@string/terms_of_use" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/privacySettingsLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:visibility="gone">

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="5dp" />

                <CheckBox
                    android:id="@+id/checkBoxShowFriends"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:button="@drawable/checkbox_selector"
                    android:checked="true"
                    android:text="@string/show_list_friends"
                    android:textColor="#FFF"
                    app:buttonIconTint="#FFF" />

                <CheckBox
                    android:id="@+id/checkBoxShowBalance"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:button="@drawable/checkbox_selector"
                    android:checked="true"
                    android:text="@string/show_balance"
                    android:textColor="#FFF"
                    app:buttonIconTint="#FFF" />

                <CheckBox
                    android:id="@+id/checkBoxShowRecent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:button="@drawable/checkbox_selector"
                    android:checked="true"
                    android:text="@string/show_recent_tracks"
                    android:textColor="#FFF"
                    app:buttonIconTint="#FFF" />
            </LinearLayout>

            <Space
                android:layout_width="50dp"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>