<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:gravity="center_horizontal" android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content">
    <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:layout_width="300dp" android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:background="@drawable/rectangle_2"
            android:gravity="center"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/titleBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/create_room_title"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </LinearLayout>
        <LinearLayout android:gravity="center" android:orientation="vertical" android:background="@color/white" android:padding="24dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:minHeight="150dp">
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editRoomTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/room_name"
                android:textColorHint="@color/hint">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text"
                    android:maxLength="20"
                    android:textColor="#000000" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editRoomPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_hint"
                android:textColorHint="@color/hint"
                app:endIconMode="password_toggle">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPassword"
                    android:maxLength="10"
                    android:textColor="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editRoomPlayersCount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/players_count_size"
                android:textColorHint="@color/hint">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="number"
                    android:maxLength="1"
                    android:text="@string/default_players_size"
                    android:textColor="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>

            <CheckBox
                android:id="@+id/cbEnableLoto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:button="@drawable/checkbox_selector"
                android:checked="true"
                android:text="@string/enable_loto"
                android:textColor="@color/black"
                android:visibility="visible"
                app:buttonIconTint="#FFF" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/button_submit"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:background="@drawable/rectangle_2"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:orientation="horizontal"
            android:rotationX="180">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_room"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:rotationX="180"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
